# ADK

./: .gitignore  ADK.sln  CMakeLists.txt  LICENSE  README.md  build-win32-cmake.bat  run.bat
ADK/: ADK.vcxproj  ADK.vcxproj.filters  ADKEditorMetaRegistry.h  ADKInput.h  DemoPlatformerOneWayPlatform.cpp  DemoPlatformerTile.cpp  DemoPlatformerTile.h  ExampleEntity.cpp  ExampleEntity.h  GrapplehookPlayer.cpp  GrapplehookPlayer.h  PlatformerActiveMovingPlatform.cpp  PlatformerActiveMovingPlatform.h  PlatformerActivePlatform.cpp  PlatformerActivePlatform.h  PlatformerDamageBlock.cpp  PlatformerDamageBlock.h  PlatformerFallingPlatform.cpp  PlatformerFallingPlatform.h  PlatformerFallingPlatformMedium.cpp  PlatformerFallingPlatformMedium.h  PlatformerFallingPlatformSmall.cpp  PlatformerFallingPlatformSmall.h  PlatformerMovingDamageBox.cpp  PlatformerMovingPlatform.cpp  PlatformerMovingPlatform.h  PlatformerOneWayTile.cpp  PlatformerPassiveMovingPlatform.cpp  PlatformerPassiveMovingPlatform.h  PlatformerPlayer.cpp  PlatformerPlayer.h  PlatformerSpikes.cpp  PlatformerSpikes.h  PlatformerTile.cpp  PlatformerTrampoline.cpp  PlatformerTrampoline.h  PlatformerTriggerBox.cpp  Scene_Game.cpp  Scene_Game.h  Scene_PlatformerGame.cpp  (+8 more)
ADK/Engine/: ADKAssets.cpp  ADKAssets.h  ADKCamera.cpp  ADKCamera.h  ADKGameStatics.cpp  ADKMath.h  ADKMenu.cpp  ADKRaycast.cpp  ADKRaycast.h  ADKSaveLoad.cpp  ADKSaveLoad.h  ADKTextures.cpp  ADKTextures.h  ADKTimer.cpp  AssetManager.cpp  AssetManager.h  BoxCollider.cpp  BoxCollider.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityList.cpp  EntityList.h  Main.cpp  MoreColors.h  Scene.cpp  Scene.h  Scene_Editor.cpp  Scene_Editor.h  TextureManager.cpp  TextureManager.h  TileEntity.cpp  TileEntity.h  imgui-SFML.cpp  imgui_widgets.cpp  meta.hpp
ADK/Game/: DemoPlatformerOneWayPlatform.cpp  DemoPlatformerOneWayPlatform.h  DemoPlatformerTile.cpp  DemoPlatformerTile.h  PlatformerPlayer.cpp  PlatformerPlayer.h  Scene_Game.cpp  Scene_Game.h
ADK/Saved/: saved_readme.txt
code backups/platformer character 1-31-2021/: BoxCollider.cpp
code backups/platformer character 10-27-2020/: PlatformerPlayer.cpp  PlatformerPlayer.h
code backups/platformer character 10-29-2020/: Entity.cpp  EntityList.cpp
code backups/platformer character 11-08-2020/: Entity.cpp  Entity.h  EntityList.cpp  PlatformerPlayer.h
code backups/platformer entities code 1-31-2021/: EntityList.cpp  PlatformerFallingPlatformMedium.cpp  PlatformerFallingPlatformSmall.cpp  PlatformerFallingPlatformSmall.h  PlatformerMovingDamageBox.cpp  PlatformerMovingPlatform.cpp  PlatformerMovingPlatform.h  (+6 more)
data/: data_README.txt  imgui.ini
src/: PlatformerActivePlatform.cpp  PlatformerDamageBox.cpp  PlatformerDamageBox.h  PlatformerFallingPlatform.cpp  PlatformerMovingPlatform.cpp  PlatformerOneWayTile.h  PlatformerPlayer.h  PlatformerSpikes.cpp  PlatformerSpikes.h  PlatformerTile.h  Scene_PlatformerGame.h
(+107 files in other folders)
